// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPopoverTitle is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPopoverTitle testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPopoverTitle props paddingSize l is rendered 1`] = `
<div
  class="euiPopoverTitle euiPopoverTitle--paddingLarge"
/>
`;

exports[`EuiPopoverTitle props paddingSize m is rendered 1`] = `
<div
  class="euiPopoverTitle euiPopoverTitle--paddingMedium"
/>
`;

exports[`EuiPopoverTitle props paddingSize none is rendered 1`] = `
<div
  class="euiPopoverTitle euiPopoverTitle--paddingNone"
/>
`;

exports[`EuiPopoverTitle props paddingSize s is rendered 1`] = `
<div
  class="euiPopoverTitle euiPopoverTitle--paddingSmall"
/>
`;
